syntax = "proto3";

package com.freepper.catalog.api;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "image_list.proto";
import "validate/validate.proto";
import "parameter.proto";
import "money.proto";
import "google/protobuf/field_mask.proto";

message Model {
  option (google.api.resource) = {
    type: "api.freepper.com/Model"
    pattern: "categories/{category}/models/{model}"
  };
  string name = 1;
  string uid = 2;
  string readable_id = 3 [(validate.rules).string.min_len = 1];
  string display_name = 4 [(validate.rules).string.min_len = 1];
  string description = 5 [(validate.rules).string.min_len = 1];
  ImageList image_list = 7 [(validate.rules).message.skip = true];
  Money minimal_price = 8 [(google.api.field_behavior) = OUTPUT_ONLY];
  repeated ParameterList parameter_lists = 9 [(validate.rules).message.skip = true];
}

message CreateModelRequest {
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "api.freepper.com/Category"
    }
  ];

  Model model = 2 [
    (validate.rules).message.required = true
  ];

  // The ID to use for the model, which will become the final component of
  // the book's resource name.
  //
  // This value should be UUID_V4
  string model_id = 3;
}

message GetModelRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "api.freepper.com/Model"
    }
  ];
}

message DeleteModelRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "api.freepper.com/Model"
    }
  ];
}

message UpdateModelRequest {
  Model model = 1;
  google.protobuf.FieldMask update_mask = 2 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).message.required = true
  ];
}

message ListModelsRequest {
  // The parent resource name, for example, "categories/category1".
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "api.freepper.com/Model"
    }];

  // The maximum number of items to return.
  int32 page_size = 2 [
    (validate.rules).int32.gte = 0
  ];

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListModelsResponse {
  //There will be a maximum number of items returned based on the page_size field
  // in the request.
  repeated Model models = 1;

  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}
